crates/pmcp-code-mode-derive/tests/ui/missing_config.stderr
error: #[derive(CodeMode)] is missing required field(s): `code_mode_config`.
       Required fields: code_mode_config, token_secret, policy_evaluator, code_executor
  --> tests/ui/missing_config.rs:19:8
   |
19 | struct MyServer {
   |        ^^^^^^^^
